# proofhouse-python-tool

./: .cspell-words.txt  .cspell.jsonc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .rumdl.toml  .vale.ini  .yamllintignore  AGENTS.md  Brewfile  CHANGELOG.md  Justfile  REUSE.toml  apm.lock.yaml  apm.yml  biome.json  cog.toml  cosmic-ray.toml  pyproject.toml  vulture_allowlist.py
.claude/rules/: wip.md
.github/: CODEOWNERS  actionlint.yaml  renovate.json5
.github/workflows/: ci.yml  codeql.yml  fuzz-nightly.yml  lint-codeowners.yml  lint-workflows.yml  mutation-diff.yml  mutation-nightly.yml  renovate-config-validator.yaml  renovate.yaml  security.yml
.vale/config/vocabularies/proofhouse/: accept.txt
.vale/proofhouse/: Acronyms.yml
src/proofhouse_python_tool/: __init__.py  buildmeta.py  cli.py
src/proofhouse_python_tool/testing/: __init__.py
tests/: test_buildmeta.py  test_cli.py
tests/property/: conftest.py  test_buildmeta_properties.py
tests/unit/: test_buildmeta.py  test_cli.py
tools/: fuzz.py  mutscope.py
