[project]
name = "proofhouse-python-tool"
version = "0.0.0"
description = "Reference CLI for the Proofhouse Python tool reference repository"
authors = [{ name = "Tony Burns", email = "tony@tonyburns.net" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
proofhouse-python-tool = "proofhouse_python_tool.cli:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

# The test group stands alone so the CI test matrix can sync it
# without the lint tools. complexipy publishes no free-threaded
# wheels, and its sdist fails to link against the 3.14t interpreter
# on Windows; lint tooling never runs in the test matrix, so those
# slots should not have to install (or build) it.
[dependency-groups]
dev = [
    { include-group = "test" },
    "complexipy>=5.5.0",
    "pyrefly>=1.0.0",
    "ruff>=0.15.17",
]
test = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[tool.complexipy]
# Scope lives here rather than in the Justfile recipe so editor and
# pre-commit invocations of a bare `complexipy` measure the same tree
# the CI gate does.
paths = ["src", "tests"]
# Sonar's default cognitive complexity ceiling; complexipy ships the
# same default, but an unpinned threshold would let an upstream
# default change move the gate without a visible diff here.
max-complexity-allowed = 15

[tool.pyrefly]
project-includes = ["src", "tests"]
# The stamp module is generated by `just stamp` and gitignored; excluding
# it keeps a stamped checkout type checking identically to a fresh clone.
# pyrefly appends this entry to its built-in excludes rather than
# replacing them.
project-excludes = ["src/proofhouse_python_tool/_buildstamp.py"]
# The strictest of the three behaviors: bodies of unannotated functions
# are still checked and their return types inferred, instead of the body
# being skipped or the return collapsing to Any. Pinned explicitly so an
# upstream default change cannot relax the gate.
untyped-def-behavior = "check-and-infer-return-type"

# Every error kind pyrefly 1.0 knows, pinned to "error". Several kinds
# (the implicit-any and unannotated families among them) default to off
# or warn; enumerating the whole catalog turns those on and keeps kinds
# that upstream later demotes from failing silently. Regenerate the list
# when a pyrefly bump adds new kinds: `pyrefly check --only` with an
# unknown kind prints the full catalog as its possible values.
[tool.pyrefly.errors]
abstract-method-call = "error"
annotation-mismatch = "error"
assert-type = "error"
bad-argument-count = "error"
bad-argument-type = "error"
bad-assignment = "error"
bad-class-definition = "error"
bad-context-manager = "error"
bad-dunder-all = "error"
bad-function-definition = "error"
bad-index = "error"
bad-instantiation = "error"
bad-keyword-argument = "error"
bad-match = "error"
bad-override = "error"
bad-override-mutable-attribute = "error"
bad-override-param-name = "error"
bad-param-name-override = "error"
bad-raise = "error"
bad-return = "error"
bad-specialization = "error"
bad-typed-dict = "error"
bad-typed-dict-key = "error"
bad-unpacking = "error"
deprecated = "error"
division-by-zero = "error"
implicit-abstract-class = "error"
implicit-any = "error"
implicit-any-attribute = "error"
implicit-any-empty-container = "error"
implicit-any-parameter = "error"
implicit-any-type-argument = "error"
implicit-import = "error"
implicitly-defined-attribute = "error"
incompatible-overload-residual = "error"
inconsistent-inheritance = "error"
inconsistent-overload = "error"
inconsistent-overload-default = "error"
internal-error = "error"
invalid-annotation = "error"
invalid-argument = "error"
invalid-decorator = "error"
invalid-inheritance = "error"
invalid-literal = "error"
invalid-overload = "error"
invalid-param-spec = "error"
invalid-pattern = "error"
invalid-self-type = "error"
invalid-super-call = "error"
invalid-syntax = "error"
invalid-type-alias = "error"
invalid-type-var = "error"
invalid-type-var-tuple = "error"
invalid-variance = "error"
invalid-yield = "error"
missing-argument = "error"
missing-attribute = "error"
missing-import = "error"
missing-module-attribute = "error"
missing-override-decorator = "error"
missing-source = "error"
missing-source-for-stubs = "error"
name-mismatch = "error"
no-access = "error"
no-matching-overload = "error"
non-convergent-recursion = "error"
non-exhaustive-match = "error"
not-a-type = "error"
not-async = "error"
not-callable = "error"
not-iterable = "error"
not-required-key-access = "error"
open-unpacking = "error"
parse-error = "error"
protocol-implicitly-defined-attribute = "error"
read-only = "error"
redefinition = "error"
redundant-cast = "error"
redundant-condition = "error"
reveal-type = "error"
unannotated-attribute = "error"
unannotated-parameter = "error"
unannotated-protocol-member = "error"
unannotated-return = "error"
unbound-name = "error"
unexpected-keyword = "error"
unexpected-positional-argument = "error"
unimported-directive = "error"
unknown-name = "error"
unnecessary-comparison = "error"
unnecessary-type-conversion = "error"
unreachable = "error"
unresolvable-dunder-all = "error"
unsafe-overlap = "error"
unsupported = "error"
unsupported-delete = "error"
unsupported-operation = "error"
untyped-import = "error"
unused-coroutine = "error"
unused-ignore = "error"
variance-mismatch = "error"

[tool.pytest]
addopts = ["-ra", "--strict-markers", "--strict-config", "--import-mode=importlib"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src"]
# The stamp module is generated by `just stamp` and gitignored; excluding
# it keeps a stamped checkout linting identically to a fresh clone.
extend-exclude = ["src/proofhouse_python_tool/_buildstamp.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # COM812 and ISC001 conflict with the formatter; ruff itself warns
    # when they are enabled alongside `ruff format`.
    "COM812",
    "ISC001",
    # Docstrings belong where they carry signal, not on every module,
    # class, and function as ritual. The pydocstyle shape rules (D2xx,
    # D4xx) still apply to every docstring that does exist.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    # License headers are enforced by the reuse SPDX gate, and CPY001
    # only runs under preview mode anyway.
    "CPY",
    # Plain TODO comments are allowed; requiring an author (TD002), an
    # issue link (TD003), or treating each one as a defect (FIX002)
    # turns lightweight notes into ceremony.
    "TD002",
    "TD003",
    "FIX002",
]

[tool.ruff.lint.isort]
known-first-party = ["proofhouse_python_tool"]

[tool.ruff.lint.mccabe]
# Sonar's default cyclomatic complexity ceiling.
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# S101: asserts are pytest's assertion API. PLR2004: literal expected
# values read better in tests than named constants. INP001: test dirs
# are intentionally __init__-free under pytest's importlib mode.
"tests/**" = ["S101", "PLR2004", "INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"
