[project]
name = "proofhouse-python-tool"
version = "0.0.0"
description = "Reference CLI for the Proofhouse Python tool reference repository"
authors = [{ name = "Tony Burns", email = "tony@tonyburns.net" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
proofhouse-python-tool = "proofhouse_python_tool.cli:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

# The test group stands alone so the CI test matrix can sync it
# without the lint tools. complexipy publishes no free-threaded
# wheels, and its sdist fails to link against the 3.14t interpreter
# on Windows; lint tooling never runs in the test matrix, so those
# slots should not have to install (or build) it.
[dependency-groups]
dev = [
    { include-group = "test" },
    "bandit>=1.9.4",
    "complexipy>=5.5.0",
    "cosmic-ray>=8.4.6",
    "diff-cover>=10.3.0",
    "import-linter>=2.11",
    "pip-audit>=2.10.1",
    "pylint>=4.0.5",
    "pyrefly>=1.0.0",
    "reuse>=6.2.0",
    "ruff>=0.15.17",
    "vulture>=2.16",
]
# pytest-cov rides in the test group, not dev: the CI test matrix syncs
# only this group, and every slot runs `just cover-slot` to capture its
# own coverage data. diff-cover stays in dev — it runs solely in the
# downstream coverage job, never on the per-slot path. hypothesis sits
# here for the same reason: the property suites under tests/property run
# on every matrix slot, so the test group has to carry their engine.
# pytest-randomly and pytest-xdist join on the same logic: randomly's
# per-run reordering happens on every invocation once installed, and the
# slots pass `-n auto` to xdist, so both have to be present wherever the
# suite runs.
test = [
    "hypothesis>=6.155.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.1.0",
    "pytest-xdist>=3.8.0",
]

[tool.complexipy]
# Scope lives here rather than in the Justfile recipe so editor and
# pre-commit invocations of a bare `complexipy` measure the same tree
# the CI gate does.
paths = ["src", "tests"]
# Sonar's default cognitive complexity ceiling; complexipy ships the
# same default, but an unpinned threshold would let an upstream
# default change move the gate without a visible diff here.
max-complexity-allowed = 15

[tool.importlinter]
root_package = "proofhouse_python_tool"

# cli sits above buildmeta: the command surface renders what the
# metadata layer reports, never the other way around. A buildmeta
# import of cli would let version plumbing reach back into typer
# wiring, the inversion this contract turns into a gate failure.
[[tool.importlinter.contracts]]
name = "cli sits above buildmeta"
type = "layers"
containers = ["proofhouse_python_tool"]
layers = ["cli", "buildmeta"]

# The testing subpackage ships in the wheel for downstream test
# suites; production modules must never depend on it, or test-only
# conveniences (its in-process click runner among them) become
# load-bearing at runtime.
[[tool.importlinter.contracts]]
name = "production modules stay clear of testing helpers"
type = "forbidden"
source_modules = [
    "proofhouse_python_tool.cli",
    "proofhouse_python_tool.buildmeta",
]
forbidden_modules = ["proofhouse_python_tool.testing"]

[tool.pylint.main]
# The stamp module is generated by `just stamp` and gitignored; ignoring
# it keeps a stamped checkout linting identically to a fresh clone.
ignore-paths = ["src/proofhouse_python_tool/_buildstamp.py"]
# tests/ holds no __init__.py files (pytest's importlib mode); recursive
# discovery lets pylint walk it as a plain directory instead of refusing
# non-package paths.
recursive = true

[tool.pylint."messages control"]
# pylint serves exactly one purpose here: its similarities checker, the
# cross-file copy-paste detector nothing else in the toolchain provides.
# Everything pylint could otherwise report is ruff's and pyrefly's job,
# so the whole catalog goes off and one message comes back on.
disable = ["all"]
enable = ["duplicate-code"]

[tool.pylint.similarities]
# Four matching lines counts as a clone — pylint's default, pinned so an
# upstream default change cannot move the gate without a visible diff.
min-similarity-lines = 4
# Two modules importing the same names is convergence, not copy-paste,
# and docstrings repeating a phrase share wording, not logic; left in,
# both would feed the similarity window with lines nobody would deduplicate.
ignore-imports = true
ignore-docstrings = true

[tool.pyrefly]
project-includes = ["src", "tests"]
# The stamp module is generated by `just stamp` and gitignored; excluding
# it keeps a stamped checkout type checking identically to a fresh clone.
# pyrefly appends this entry to its built-in excludes rather than
# replacing them.
project-excludes = ["src/proofhouse_python_tool/_buildstamp.py"]
# The strictest of the three behaviors: bodies of unannotated functions
# are still checked and their return types inferred, instead of the body
# being skipped or the return collapsing to Any. Pinned explicitly so an
# upstream default change cannot relax the gate.
untyped-def-behavior = "check-and-infer-return-type"

# Every error kind pyrefly 1.0 knows, pinned to "error". Several kinds
# (the implicit-any and unannotated families among them) default to off
# or warn; enumerating the whole catalog turns those on and keeps kinds
# that upstream later demotes from failing silently. Regenerate the list
# when a pyrefly bump adds new kinds: `pyrefly check --only` with an
# unknown kind prints the full catalog as its possible values.
[tool.pyrefly.errors]
abstract-method-call = "error"
annotation-mismatch = "error"
assert-type = "error"
bad-argument-count = "error"
bad-argument-type = "error"
bad-assignment = "error"
bad-class-definition = "error"
bad-context-manager = "error"
bad-dunder-all = "error"
bad-function-definition = "error"
bad-index = "error"
bad-instantiation = "error"
bad-keyword-argument = "error"
bad-match = "error"
bad-override = "error"
bad-override-mutable-attribute = "error"
bad-override-param-name = "error"
bad-param-name-override = "error"
bad-raise = "error"
bad-return = "error"
bad-specialization = "error"
bad-typed-dict = "error"
bad-typed-dict-key = "error"
bad-unpacking = "error"
deprecated = "error"
division-by-zero = "error"
implicit-abstract-class = "error"
implicit-any = "error"
implicit-any-attribute = "error"
implicit-any-empty-container = "error"
implicit-any-parameter = "error"
implicit-any-type-argument = "error"
implicit-import = "error"
implicitly-defined-attribute = "error"
incompatible-overload-residual = "error"
inconsistent-inheritance = "error"
inconsistent-overload = "error"
inconsistent-overload-default = "error"
internal-error = "error"
invalid-annotation = "error"
invalid-argument = "error"
invalid-decorator = "error"
invalid-inheritance = "error"
invalid-literal = "error"
invalid-overload = "error"
invalid-param-spec = "error"
invalid-pattern = "error"
invalid-self-type = "error"
invalid-super-call = "error"
invalid-syntax = "error"
invalid-type-alias = "error"
invalid-type-var = "error"
invalid-type-var-tuple = "error"
invalid-variance = "error"
invalid-yield = "error"
missing-argument = "error"
missing-attribute = "error"
missing-import = "error"
missing-module-attribute = "error"
missing-override-decorator = "error"
missing-source = "error"
missing-source-for-stubs = "error"
name-mismatch = "error"
no-access = "error"
no-matching-overload = "error"
non-convergent-recursion = "error"
non-exhaustive-match = "error"
not-a-type = "error"
not-async = "error"
not-callable = "error"
not-iterable = "error"
not-required-key-access = "error"
open-unpacking = "error"
parse-error = "error"
protocol-implicitly-defined-attribute = "error"
read-only = "error"
redefinition = "error"
redundant-cast = "error"
redundant-condition = "error"
reveal-type = "error"
unannotated-attribute = "error"
unannotated-parameter = "error"
unannotated-protocol-member = "error"
unannotated-return = "error"
unbound-name = "error"
unexpected-keyword = "error"
unexpected-positional-argument = "error"
unimported-directive = "error"
unknown-name = "error"
unnecessary-comparison = "error"
unnecessary-type-conversion = "error"
unreachable = "error"
unresolvable-dunder-all = "error"
unsafe-overlap = "error"
unsupported = "error"
unsupported-delete = "error"
unsupported-operation = "error"
untyped-import = "error"
unused-coroutine = "error"
unused-ignore = "error"
variance-mismatch = "error"

[tool.coverage.run]
# Measure branch coverage, not just line coverage: a 100% line score
# can still leave one side of a conditional never taken, which is the
# exact failure mode the fallback paths in buildmeta would hide.
branch = true
# Coverage instruments the shipped package, never the tests. A test
# file with no assertion would otherwise count itself as covered; the
# mutation and property gates that arrive later are what prove the
# tests actually pin behavior.
source = ["src"]
# Store paths relative to the project root so the per-slot data files
# the CI matrix produces combine cleanly across operating systems —
# an absolute Windows path and an absolute Linux path for the same
# module would otherwise refuse to merge.
relative_files = true

[tool.coverage.report]
# The whole point of this gate: nothing in the package ships without a
# branch reaching it. Anything genuinely unreachable belongs in
# exclude_also below with a reason, not behind a lowered threshold.
fail_under = 100
show_missing = true
# Lines coverage should not count against the score. Each pattern
# carries the reason it can never execute under test.
exclude_also = [
    # Bodies guarded by TYPE_CHECKING run only under a type checker,
    # never at runtime.
    "if TYPE_CHECKING:",
    # assert_never marks a match arm the type checker has proven
    # unreachable; reaching it at runtime is a bug, not a tested path.
    "assert_never\\(",
    # The module-level entry guard fires only when a file runs as a
    # script, which the test suite never does.
    "if __name__ == \"__main__\":",
]

[tool.pytest]
addopts = ["-ra", "--strict-markers", "--strict-config", "--import-mode=importlib"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src"]
# The stamp module is generated by `just stamp` and gitignored; excluding
# it keeps a stamped checkout linting identically to a fresh clone.
extend-exclude = ["src/proofhouse_python_tool/_buildstamp.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # COM812 and ISC001 conflict with the formatter; ruff itself warns
    # when they are enabled alongside `ruff format`.
    "COM812",
    "ISC001",
    # Docstrings belong where they carry signal, not on every module,
    # class, and function as ritual. The pydocstyle shape rules (D2xx,
    # D4xx) still apply to every docstring that does exist.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    # License headers are enforced by the reuse SPDX gate, and CPY001
    # only runs under preview mode anyway.
    "CPY",
    # Plain TODO comments are allowed; requiring an author (TD002), an
    # issue link (TD003), or treating each one as a defect (FIX002)
    # turns lightweight notes into ceremony.
    "TD002",
    "TD003",
    "FIX002",
]

[tool.ruff.lint.isort]
known-first-party = ["proofhouse_python_tool"]

[tool.ruff.lint.mccabe]
# Sonar's default cyclomatic complexity ceiling.
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# S101: asserts are pytest's assertion API. PLR2004: literal expected
# values read better in tests than named constants. INP001: test dirs
# are intentionally __init__-free under pytest's importlib mode.
"tests/**" = ["S101", "PLR2004", "INP001"]
# The vulture allowlist is data for vulture, never imported: a bare
# name there is the mechanism that marks a definition as used, so the
# useless-expression (B018) and undefined-name (F821) findings describe
# exactly the file's intended shape.
"vulture_allowlist.py" = ["B018", "F821"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.vulture]
# Scope lives here rather than in the Justfile recipe so editor and
# pre-commit invocations of a bare `vulture` scan the same tree the CI
# gate does. The allowlist rides along as a scanned path: a name
# referenced there counts as used, which exempts exactly the listed
# definitions while everything else stays at vulture's full strictness.
# Each entry documents why its caller sits outside vulture's static
# view; no confidence threshold is lowered.
paths = ["src", "tests", "vulture_allowlist.py"]
